--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -1,23 +1,24 @@
 <!doctype html>
 <html>
-<head>
-<style>@import "popup.css";</style>
-<script src="popup.js"></script>
-</head>
-<body>
-<filedset id="opts">
-  <label><input type="checkbox" name="state" value="1"/>Profiling</label>
-  <label>Flags</label>
-  <label><input type="checkbox" name="flags[]" value="cpu"/>CPU</label>
-  <label><input type="checkbox" name="flags[]" value="mem"/>Memory</label>
-  <label>Source</label>
-  <input type="text" name="source" value="xhprof"/>
-  <label>Requests</label>
-  <label><input type="checkbox" name="types[]" value="main_frame"/>page</label>
-  <label><input type="checkbox" name="types[]" value="sub_frame"/>frames</label>
-  <label><input type="checkbox" name="types[]" value="xmlhttprequest"/>xhrs</label>
-</fieldset>
-<filedset id="runs">
-</fieldset>
-</body>
+  <head>
+    <style>@import "popup.css";</style>
+    <script src="popup.js"></script>
+    <base target="_blank"/>
+  </head>
+  <body>
+    <filedset id="opts">
+      <label><input type="checkbox" name="state" value="1"/>Profiling</label>
+      <label>Flags</label>
+      <label><input type="checkbox" name="flags[]" value="cpu"/>CPU</label>
+      <label><input type="checkbox" name="flags[]" value="mem"/>Memory</label>
+      <label>Source</label>
+      <input type="text" name="source" value="xhprof"/>
+      <label>Requests</label>
+      <label><input type="checkbox" name="types[]" value="main_frame"/>page</label>
+      <label><input type="checkbox" name="types[]" value="sub_frame"/>frames</label>
+      <label><input type="checkbox" name="types[]" value="xmlhttprequest"/>xhrs</label>
+    </fieldset>
+    <filedset id="runs">
+    </fieldset>
+  </body>
 </html>
