--- a/chromium/options.html
+++ b/chromium/options.html
@@ -1,16 +1,39 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>K10N XHProf Options</title>
-    <style>@import "popup.css"</style>
+    <link rel="stylesheet/less" href="bootstrap/less/bootstrap.less">
+    <script src="less.js"></script>
     <script src="options.js"></script>
   </head>
   <body>
-    <fieldset id="opts">
-      <label>XHProf UI Url</label>
-      <input type="text" name="url" value="http://xhprof.dom/"/>
-      <label>XHProf Secret Key</label>
-      <input type="text" name="key" value=""/>
-    </fieldset>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span2">
+        </div>
+        <div class="span8">
+          <legend>K10N XHProf Options</legend>
+          <label>XHProf User Interface Url</label>
+          <div class="input-append">
+            <input type="text" name="url" placeholder="http://xhprof.dom/">
+            <span class="add-on">?run=1234567890</span>
+          </div>
+          <span class="help-block">
+            Location where <strong>xhprof_html</strong> installed.
+          </span>
+          <label>XHProf Secret Key</label>
+          <input type="text" name="key">
+          <span class="help-block">
+            <strong>xhprof.secret_key</strong> option or argument of <strong>_k10n_xhprof_head()</strong>.
+          </span>
+          <hr>
+          <p>k10n XHProf Chromium extension<br>
+          Copyright © 2012, Kayo &lt;<a href="mailto:Kayo%20&lt;kayo@illumium.org&gt;?subject=k10n%20XHProf">kayo@illumium.org</a>&gt;</p>
+        </div>
+        <div class="span2">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
