--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -1,24 +1,44 @@
 <!doctype html>
 <html>
   <head>
-    <style>@import "popup.css";</style>
+    <meta charset="utf-8">
+    <title>K10N XHProf</title>
+    <link rel="stylesheet/less" href="bootstrap/less/bootstrap.less">
+    <script src="less.js"></script>
+    <script src="jquery.js"></script>
+    <script src="bootstrap/js/bootstrap-button.js"></script>
     <script src="popup.js"></script>
     <base target="_blank"/>
   </head>
   <body>
-    <filedset id="opts">
-      <label><input type="checkbox" name="state" value="1"/>Profiling</label>
-      <label>Flags</label>
-      <label><input type="checkbox" name="flags[]" value="cpu"/>CPU</label>
-      <label><input type="checkbox" name="flags[]" value="mem"/>Memory</label>
-      <label>Source</label>
-      <input type="text" name="source" value="xhprof"/>
-      <label>Requests</label>
-      <label><input type="checkbox" name="types[]" value="main_frame"/>page</label>
-      <label><input type="checkbox" name="types[]" value="sub_frame"/>frames</label>
-      <label><input type="checkbox" name="types[]" value="xmlhttprequest"/>xhrs</label>
-    </fieldset>
-    <filedset id="runs">
-    </fieldset>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="btn-toolbar">
+            <button id="state" class="btn btn-block btn-large" data-toggle="button">Profiling</button>
+          </div>
+          <div class="row-fluid">
+            <div class="btn-group span6" id="flags" data-toggle="buttons-checkbox">
+              <button class="btn span6" value="cpu">CPU</button>
+              <button class="btn span6" value="mem">MEM</button>
+            </div>
+            <div class="btn-group input-prepend span6">
+              <span class="add-on span5">Source</span>
+              <input type="text" id="source" class="span7">
+            </div>
+          </div>
+          <div class="btn-group input-prepend" id="types" data-toggle="buttons-checkbox">
+            <span class="add-on">Reqs</span>
+            <button class="btn" value="main_frame">page</button>
+            <button class="btn" value="sub_frame">frame</button>
+            <button class="btn" value="xmlhttprequest">xhr</button>
+            <button class="btn" value="image">image</button>
+          </div>
+          <hr>
+          <div id="runs">
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
