--- a/chromium/options.html
+++ b/chromium/options.html
@@ -33,10 +33,13 @@
             </span>
           </div>
           <hr>
-          <p>k10n XHProf Chromium extension<br>
-          Copyright © 2012, Kayo &lt;<a href="mailto:Kayo%20&lt;kayo@illumium.org&gt;?subject=k10n%20XHProf">kayo@illumium.org</a>&gt;</p>
+          <p>
+            k10n XHProf Chromium extension<br>
+            Copyright © 2012, Kayo &lt;<a href="mailto:Kayo%20&lt;kayo@illumium.org&gt;?subject=k10n%20XHProf">kayo@illumium.org</a>&gt;
+          </p>
         </div>
         <div class="span2">
+          <a href="https://github.com/katyo/k10n-xhprof"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
         </div>
       </div>
     </div>
