Icon added to options..

--- a/chromium/options.html
+++ b/chromium/options.html
@@ -13,6 +13,7 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span2">
+          <img src="icon_128.png">
         </div>
         <div class="span8">
           <legend>K10N XHProf Options</legend>
@@ -56,6 +57,8 @@
   auto_prepend_file=/path/to/auto_head.php
   auto_append_file=/path/to/auto_foot.php
 </pre>
+
+
                   Also you need to configure web-server to work with its Web UI.
                   Usually Web UI located here <em>/usr/share/php5-xhprof/xhprof_html</em> (in Debian-like systems).
                 </div>
