Profile logs changed..

--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -34,8 +34,11 @@
             <button class="btn" value="xmlhttprequest">xhr</button>
             <button class="btn" value="image">image</button>
           </div>
-          <hr>
-          <div id="runs">
+          <!--<legend>Profile logs</legend>-->
+          <div id="runs" class="control-group">
+            <span class="label label-info">
+              No logs (Push profile button and make requests)
+            </span>
           </div>
         </div>
       </div>
