No logs text changed..

--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -37,7 +37,7 @@
           <!--<legend>Profile logs</legend>-->
           <div id="runs" class="control-group">
             <span class="label label-info">
-              No logs (Push profile button and make requests)
+              No logs (Activate profiling and make requests)
             </span>
           </div>
         </div>
