--- a/chromium/options.html
+++ b/chromium/options.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span2">
-          <img src="icon_128.png">
+          <h1><a href="https://github.com/katyo/k10n-xhprof"><img src="icon_128.png" title="k10n XHprof Chromium extension"></a></h1>
         </div>
         <div class="span8">
           <legend>K10N XHProf Options</legend>
