--- a/chromium/options.html
+++ b/chromium/options.html
@@ -129,7 +129,7 @@
             </div>
           </div>
           <hr>
-          <p>
+          <p class="muted">
             k10n XHProf Chromium extension<br>
             Copyright © 2012, Kayo &lt;<a href="mailto:Kayo%20&lt;kayo@illumium.org&gt;?subject=k10n%20XHProf">kayo@illumium.org</a>&gt;
           </p>
